[package]
name = "convars"
version = "0.1.0"
edition = "2021"
authors = ["Abe M"]
description = "Console config variables library for game engines."
keywords = [
    "convars",
    "cvars",
    "console variables",
    "console",
    "bevy",
    "gamedev",
]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
